--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -96,7 +96,7 @@
       var popup = layui.popup;
 
       admin.setConfigType("yml");
-      admin.setConfigPath("{:url('index/config/pear')}");
+      admin.setConfigPath("{:url('admin/config/pear')}");
 
       admin.render();
 
