--- a/application/admin/view/auth/group.html
+++ b/application/admin/view/auth/group.html
@@ -1,183 +1,194 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>数据表格</title>
+    <link rel="stylesheet" href="__PEAR__/css/pear.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>数据表格</title>
-  <link rel="stylesheet" href="__PEAR__/css/pear.css" />
-</head>
-
-<body class="pear-container">
-
-  <div class="layui-card">
-    <div class="layui-card-body">
-      <table id="user-table" lay-filter="user-table"></table>
+  <body class="pear-container">
+    <div class="layui-card">
+      <div class="layui-card-body">
+        <table id="user-table" lay-filter="user-table"></table>
+      </div>
     </div>
-  </div>
 
-  <script type="text/html" id="user-toolbar">
-  <button class="pear-btn pear-btn-primary pear-btn-md" lay-event="add">
-    <i class="layui-icon layui-icon-add-1"></i>
-    新增
-  </button>
-  <button class="pear-btn pear-btn-danger pear-btn-md" lay-event="batchRemove">
-    <i class="layui-icon layui-icon-delete"></i>
-    删除
-  </button>
-</script>
+    <script type="text/html" id="user-toolbar">
+      <button class="pear-btn pear-btn-primary pear-btn-md" lay-event="add">
+        <i class="layui-icon layui-icon-add-1"></i>
+        新增
+      </button>
+      <button
+        class="pear-btn pear-btn-danger pear-btn-md"
+        lay-event="batchRemove"
+      >
+        <i class="layui-icon layui-icon-delete"></i>
+        删除
+      </button>
+    </script>
 
-  <script type="text/html" id="user-bar">
-  <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit"><i
-      class="layui-icon layui-icon-edit"></i></button>
-  <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove"><i
-      class="layui-icon layui-icon-delete"></i></button>
-</script>
+    <script type="text/html" id="user-bar">
+      <button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit">
+        <i class="layui-icon layui-icon-edit"></i>
+      </button>
+      <button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="remove">
+        <i class="layui-icon layui-icon-delete"></i>
+      </button>
+    </script>
 
+    <script type="text/html" id="status">
+      <input
+        type="checkbox"
+        name="enable"
+        value="{{d.id}}"
+        lay-skin="switch"
+        lay-text="Show|Hidden"
+        lay-filter="status"
+        checked="{{ d.enable == 0 ? 'true' : 'false' }}"
+      />
+    </script>
 
-  <script type="text/html" id="status">
-  <input type="checkbox" name="enable" value="{{d.id}}" lay-skin="switch" lay-text="Show|Hidden" lay-filter="status"
-    checked="{{ d.enable == 0 ? 'true' : 'false' }}">
-</script>
+    <script type="text/html" id="rules">
+      <div class="layui-btn-container tag" lay-filter="test" lay-newtags="true">
+        {{#for (var i in d.rules.split(',')) { }}
+        <span class="layui-btn layui-btn-primary layui-btn-sm"
+          >{{d.rules.split(',')[i]}}</span
+        >
+        {{# } }}
+      </div>
+    </script>
 
-  <script type="text/html" id="rules">
+    <script type="text/html" id="icon">
+      {{#if (d.icon !== '') { }}
+      <span class="{{d.icon}}"></span>
+      {{# }else { }} {{d.icon}} {{# } }}
+    </script>
 
-  <div class="layui-btn-container tag" lay-filter="test" lay-newtags="true">
-  {{#for (var i in d.rules.split(',')) { }}
-    <span class='layui-btn layui-btn-primary layui-btn-sm'>{{d.rules.split(',')[i]}}</span>
-  {{# } }}
+    <script type="text/html" id="user-createTime">
+      {{layui.util.toDateString(d.createTime, 'yyyy-MM-dd')}}
+    </script>
 
-  </div>
-</script>
-
-
-  <script type="text/html" id="icon">
-  {{#if (d.icon !== '') { }}
-    <span class="{{d.icon}}"></span>
-  {{# }else { }}
-    {{d.icon}}
-  {{# } }}
-</script>
-
-  <script type="text/html" id="user-createTime">
-{{layui.util.toDateString(d.createTime, 'yyyy-MM-dd')}}
-</script>
-
-  <div style="display: none;">
-    <div class="layer-top">
-      <br />
-      <h3>上侧弹层内容...</h3>
+    <div style="display: none">
+      <div class="layer-top">
+        <br />
+        <h3>上侧弹层内容...</h3>
+      </div>
     </div>
-  </div>
 
-  <script src="__LAYUI__/layui.js"></script>
-  <script src="__PEAR__/pear.js"></script>
-  <script>
-    layui.use(['table', 'form', 'jquery', 'drawer', 'dropdown'], function () {
-      let table = layui.table;
-      let form = layui.form;
-      let $ = layui.jquery;
-      let drawer = layui.drawer;
-      let dropdown = layui.dropdown;
+    <script src="__LAYUI__/layui.js"></script>
+    <script src="__PEAR__/pear.js"></script>
+    <script>
+      layui.use(['table', 'form', 'jquery', 'drawer', 'dropdown'], function () {
+        let table = layui.table;
+        let form = layui.form;
+        let $ = layui.jquery;
+        let drawer = layui.drawer;
+        let dropdown = layui.dropdown;
 
-      let MODULE_PATH = "/system/user/";
+        let MODULE_PATH = '/system/user/';
 
-      let cols = [
-        [{
-          type: 'checkbox'
-        },
-        {
-          title: 'ID',
-          field: 'id',
-          align: 'center',
-          width: 100
-        },
-        {
-          title: '组名称',
-          field: 'name',
-          align: '',
-          width: 260
-        },
-        {
-          title: '组权限',
-          field: 'rules',
-          align: '',
-          templet: '#rules'
-        },
-        {
-          title: '操作',
-          toolbar: '#user-bar',
-          align: 'left',
-          width: 120,
-          fixed: 'right'
-        }
-        ]
-      ]
+        let cols = [
+          [
+            {
+              type: 'checkbox',
+            },
+            {
+              title: 'ID',
+              field: 'id',
+              align: 'center',
+              width: 100,
+            },
+            {
+              title: '组名称',
+              field: 'name',
+              align: '',
+              width: 260,
+            },
+            {
+              title: '组权限',
+              field: 'rules',
+              align: '',
+              templet: '#rules',
+            },
+            {
+              title: '操作',
+              toolbar: '#user-bar',
+              align: 'left',
+              width: 120,
+              fixed: 'right',
+            },
+          ],
+        ];
 
-      table.render({
-        elem: '#user-table',
-        url: '{:url("admin/auth/group")}',
-        page: false,
-        cols: cols,
-        toolbar: '#user-toolbar',
-        defaultToolbar: [],
-        done: function (res, curr, count) {
-        }
-      });
-
-      table.on('tool(user-table)', function (obj) {
-        if (obj.event === 'remove') {
-          window.remove(obj);
-        } else if (obj.event === 'edit') {
-          window.edit(obj);
-        }
-      });
-
-      table.on('toolbar(user-table)', function (obj) {
-        if (obj.event === 'add') {
-          window.add();
-        } else if (obj.event === 'refresh') {
-          window.refresh();
-        } else if (obj.event === 'batchRemove') {
-          window.batchRemove(obj);
-        }
-      });
-
-      form.on('submit(user-query)', function (data) {
-        table.reload('user-table', {
-          where: data.field
-        })
-        return false;
-      });
-
-      form.on('switch(user-enable)', function (obj) {
-        layer.tips(this.value + ' ' + this.name + '：' + obj.elem.checked, obj.othis);
-      });
-
-      window.add = function () {
-        drawer.open({
-          direction: "top",
-          dom: ".layer-top",
-          distance: "30%"
+        table.render({
+          elem: '#user-table',
+          url: '{:url("admin/auth/group")}',
+          page: false,
+          cols: cols,
+          toolbar: '#user-toolbar',
+          defaultToolbar: [],
+          done: function (res, curr, count) {},
         });
-      }
 
-      window.edit = function (obj) {
-        layer.msg("修改");
-      }
-
-      window.remove = function (obj) {
-        layer.confirm('确定要删除该用户', {
-          icon: 3,
-          title: '提示'
-        }, function (index) {
+        table.on('tool(user-table)', function (obj) {
+          if (obj.event === 'remove') {
+            window.remove(obj);
+          } else if (obj.event === 'edit') {
+            window.edit(obj);
+          }
         });
-      }
 
-      window.refresh = function (param) {
-        table.reload('user-table');
-      }
-    })
-  </script>
-</body>
+        table.on('toolbar(user-table)', function (obj) {
+          if (obj.event === 'add') {
+            window.add();
+          } else if (obj.event === 'refresh') {
+            window.refresh();
+          } else if (obj.event === 'batchRemove') {
+            window.batchRemove(obj);
+          }
+        });
 
+        form.on('submit(user-query)', function (data) {
+          table.reload('user-table', {
+            where: data.field,
+          });
+          return false;
+        });
+
+        form.on('switch(user-enable)', function (obj) {
+          layer.tips(
+            this.value + ' ' + this.name + '：' + obj.elem.checked,
+            obj.othis
+          );
+        });
+
+        window.add = function () {
+          drawer.open({
+            direction: 'top',
+            dom: '.layer-top',
+            distance: '30%',
+          });
+        };
+
+        window.edit = function (obj) {
+          layer.msg('修改');
+        };
+
+        window.remove = function (obj) {
+          layer.confirm(
+            '确定要删除该用户',
+            {
+              icon: 3,
+              title: '提示',
+            },
+            function (index) {}
+          );
+        };
+
+        window.refresh = function (param) {
+          table.reload('user-table');
+        };
+      });
+    </script>
+  </body>
 </html>
